update github command to support datalevin.